# Renderer

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  Makefile  build.sh  hellot  run.sh
Examples/: .CMakeLists.txt.swp  .main.cpp.swp  :q  CMakeLists.txt  main.cpp
Examples/3D_Sandbox0/: main.cpp
Examples/3D_Sandbox1/: main.cpp
Examples/Platformer/: main.cpp
Examples/Pong/: core_pong.h  main.cpp  playerContactListener.cpp  playerContactListener.h
Examples/Sandbox0/: main.cpp
Examples/b2_Sandbox0/: main.cpp
Examples/src/: core.h  game_circle.cpp  game_circle.h  game_object.cpp  game_object.h  game_rect.cpp  game_rect.h  main.cpp
Renderer/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
Renderer/includes/Renderer/: .renderer.h.swp  .triangle.h.swp  2d_shapes.h  :wq  ImageLoader.h  camera.h  circle.h  color.h  color_shader.h  cube.h  directional_light.h  file.h  image_shader.h  light.h  orthographic_camera.h  perspective_camera.h  phong_color_shader.h  phong_texture_shader.h  point_light.h  rectangle.h  renderable.h  renderer.h  shader.h  spot_light.h  text.h  triangle.h
Renderer/src/Core/: .gl_utils.cpp.swp  .triangle.cpp.swp  :wq  ImageLoader.cpp  circle.cpp  color.cpp  color_shader.cpp  cube.cpp  directional_light.cpp  gl_context.cpp  gl_context.h  gl_core.h  gl_utils.cpp  gl_utils.h  image_shader.cpp  light.cpp  orthographic_camera.cpp  perspective_camera.cpp  phong_color_shader.cpp  phong_texture_shader.cpp  point_light.cpp  rectangle.cpp  renderable.cpp  renderer.cpp  shader.cpp  spot_light.cpp  text.cpp  triangle.cpp
assets/platformer/: map0.txt
assets/shaders/ColorShader/: shader.frag  shader.vert
assets/shaders/ImageShader/: shader.frag  shader.vert
assets/shaders/PhongColorShader/: shader.frag  shader.vert
assets/shaders/PhongTextureShader/: shader.frag  shader.vert
box2d_lib/include/box2d/: b2_math.h
glad/include/glad/: glad.h
glad/src/: glad.c
include/glad/: glad.h
